# dimos

./: pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
dimos/: conftest.py
dimos/agents/skills/: person_follow.py
dimos/control/: coordinator.py  task.py  tick_loop.py
dimos/control/tasks/: cartesian_ik_task.py  g1_groot_wbc_task.py  registry.py  servo_task.py  teleop_task.py  trajectory_task.py  velocity_task.py
dimos/core/: global_config.py  test_global_config.py
dimos/e2e_tests/: conftest.py  dimos_cli_call.py  test_dimsim_nav.py  test_dimsim_pipeline.py
dimos/experimental/security_demo/: security_module.py
dimos/hardware/drive_trains/r1pro/: adapter.py
dimos/hardware/manipulators/r1pro/: adapter.py
dimos/hardware/whole_body/: registry.py  spec.py
dimos/hardware/whole_body/transport/: adapter.py
dimos/mapping/: voxels.py
dimos/memory2/: finder.py  transform.py
dimos/msgs/visualization_msgs/: BBoxMarkers.py
dimos/navigation/nav_stack/: main.py
dimos/navigation/nav_stack/modules/path_follower/: test_path_follower_rosbag.py
dimos/navigation/nav_stack/modules/pgo/: pgo.py
dimos/navigation/nav_stack/modules/simple_planner/: simple_planner.py
dimos/navigation/nav_stack/tests/: test_cross_wall_planning_far.py  test_cross_wall_planning_simple.py
dimos/robot/: all_blueprints.py
dimos/robot/cli/: dimos.py
dimos/robot/sim/: bridge.py  scene_client.py
dimos/robot/sim/blueprints/basic/: sim_basic.py
dimos/robot/sim/scenes/: warehouse.json
dimos/robot/unitree/: mujoco_camera_constants.py
dimos/robot/unitree/g1/: g1_manipulation.py  wholebody_connection.py
dimos/robot/unitree/g1/blueprints/basic/: g1_groot_wbc.py  unitree_g1_groot_wbc.py  unitree_g1_groot_wbc_sim.py
dimos/robot/unitree/g1/blueprints/navigation/: unitree_g1_nav_onboard.py  unitree_g1_nav_sim.py
dimos/robot/unitree/go2/: __init__.py  camera.py
dimos/simulation/: mujoco_scene_playground.py
dimos/simulation/adapters/whole_body/: g1.py
dimos/simulation/engines/: mujoco_engine.py  mujoco_sim_module.py  mujoco_viewer_module.py
dimos/simulation/gazebo/: test_gazebo_sim.py
dimos/simulation/gazebo/cpp/: CMakeLists.txt  flake.nix  main.cpp
dimos/simulation/gazebo/cpp/patches/: ogre-next-egl-surfaceless-fallback.patch
dimos/simulation/gazebo/worlds/: dimos_bot.sdf  dimos_bot_minimal.sdf
dimos/simulation/unity/: module.py
dimos/teleop/quest/: blueprints.py  quest_teleop_module.py
dimos/teleop/quest/web/static/: index.html
dimos/utils/testing/: test_moment.py
dimos/visualization/viser/: viser_render_module.py
dimos/web/websocket_vis/: websocket_vis_module.py
docs/: docs.json  introduction.mdx
docs/development/: testing.md
docs/development/simulation/: creating_scenes.md  index.md  scene_editing.md
examples/native-modules/rust/src/: native_ping.rs
examples/scene_editing/: author_warehouse.py
native/rust/dimos-native-module-macros/src/: lib.rs
native/rust/dimos-native-module/src/: module.rs
native/rust/src/: module.rs
scripts/r1pro_test/: README.md
